--- a/kubernetes-model/openshift-model/pom.xml
+++ b/kubernetes-model/openshift-model/pom.xml
@@ -36,6 +36,12 @@
     <dependency>
       <groupId>io.sundr</groupId>
       <artifactId>builder-annotations</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.sundr</groupId>
@@ -49,11 +55,6 @@
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>kubernetes-model-core</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.fabric8</groupId>
-      <artifactId>kubernetes-model-rbac</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
@@ -94,6 +95,7 @@
           <sourcePaths>
             <sourcePath>${project.basedir}/src/main/resources/schema/kube-schema.json</sourcePath>
           </sourcePaths>
+          <targetPackage>io.fabric8.kubernetes.api.model</targetPackage>
           <targetPackage>io.fabric8.openshift.api.model</targetPackage>
           <includeConstructors>true</includeConstructors>
           <includeJsr303Annotations>false</includeJsr303Annotations>
@@ -126,6 +128,14 @@
             <configuration>
               <target>
                 <echo>removing the duplicate generated class</echo>
+                <delete file="${project.build.directory}/generated-sources/io/fabric8/kubernetes/api/model/coordination/v1/LeaseSpec.java" verbose="true" />
+                <delete file="${project.build.directory}/generated-sources/io/fabric8/kubernetes/api/model/Duration.java" verbose="true" />
+                <delete file="${project.build.directory}/generated-sources/io/fabric8/kubernetes/api/model/HasMetadata.java" verbose="true" />
+                <delete file="${project.build.directory}/generated-sources/io/fabric8/kubernetes/api/model/IntOrString.java" verbose="true" />
+                <delete file="${project.build.directory}/generated-sources/io/fabric8/kubernetes/api/model/Quantity.java" verbose="true" />
+                <delete file="${project.build.directory}/generated-sources/io/fabric8/kubernetes/api/model/WatchEvent.java" verbose="true" />
+                <delete file="${project.build.directory}/generated-sources/io/fabric8/openshift/api/model/Template.java" verbose="true" />
+                <delete file="${project.build.directory}/generated-sources/io/fabric8/kubernetes/api/model/admission/AdmissionRequest.java" verbose="true" />
                 <delete file="${project.build.directory}/generated-sources/io/fabric8/openshift/api/model/Template.java" verbose="true" />
                 <delete verbose="true">
                   <fileset dir="${project.build.directory}/generated-sources">
