--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- Core versions -->
-    <sundrio.version>0.21.0</sundrio.version>
+    <sundrio.version>0.21-SNAPSHOT</sundrio.version>
+<!--    <sundrio.version>0.20.0</sundrio.version>-->
     <okhttp.version>3.12.6</okhttp.version>
     <okhttp.bundle.version>3.12.1_1</okhttp.bundle.version>
     <okio.version>1.15.0</okio.version>
@@ -311,6 +312,11 @@
             <showDeprecation>true</showDeprecation>
             <showWarnings>true</showWarnings>
             <annotationProcessorPaths>
+<!--              <annotationProcessorPath>-->
+<!--                <groupId>io.sundr</groupId>-->
+<!--                <artifactId>sundr-codegen</artifactId>-->
+<!--                <version>${sundrio.version}</version>-->
+<!--              </annotationProcessorPath>-->
               <annotationProcessorPath>
                   <groupId>io.sundr</groupId>
                   <artifactId>builder-annotations</artifactId>
