--- a/extensions/knative/model/pom.xml
+++ b/extensions/knative/model/pom.xml
@@ -159,6 +159,15 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs combine.children="append">
+            <arg>--patch-module</arg><arg>io.fabric8.kubernetes.model=${project.build.directory}/generated-sources/annotations/io/fabric8/kubernetes/api/model</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
